<resources>
    <string name="app_name">LamPhongStore</string>
    <string name="ask_to_login">Đã có tài khoản?</string>
    <string name="login_text">Đăng nhập</string>
    <string name="lam_phong_logo">Lam Phong logo</string>
    <string name="hint_name">Họ và tên</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_birthday">Sinh nhật</string>
    <string name="hint_gender">Giới tính</string>
    <string name="hint_ref_code">Mã người giới thiệu (nếu có)</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="signup_text">Đăng ký</string>
    <string name="scanqrcode">Scan the QR code</string>
    <string name="customerCode">A5KOJ7</string>
    <string name="customerInstruction">Mã khách hàng của bạn</string>
    <string name="employeeInstruction">Đưa mã này cho nhân viên để checkin</string>
    <string name="hint_address">Địa chỉ</string>
    <string name="title_activity_login">Đăng nhập</string>

    <!-- Strings related to login -->
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="action_forgot_password">Quên mật khẩu?</string>
    <string name="ask_to_sign_up">Chưa tạo tài khoản?</string>
    <string name="label_profile_activity">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="err_msg_name">Vui lòng nhập tên</string>
    <string name="err_msg_email">Vui lòng nhập email hợp lệ</string>
    <string name="err_msg_phone">Xin vui lòng nhập một số điện thoại hợp lệ</string>
    <string name="err_msg_password">Mật khẩu phải dài hơn 6 ký tự</string>
    <string name="action_request_camera">Chụp ảnh</string>
    <string name="action_request_library">Chọn hình trong máy</string>
    <string name="action_request_cancel">Cancel</string>
    <string name="choice_male">Nam</string>
    <string name="choice_female">Nữ</string>
    <string name="action_save">Lưu</string>
    <string name="action_get_password">Lấy lại mật khẩu</string>
    <string name="des_profile_picture">Profile picture</string>
    <string name="hint_old_password">Mật khẩu cũ</string>
    <string name="hint_new_password">Mật khẩu mới</string>
    <string name="change_text">Thay đổi</string>
    <string name="error_same_old_password">Mật khẩu mới không được trùng với mật khẩu cũ</string>
    <string name="title_activity_main">LamPhong Store</string>
    <string name="your_point">Điểm của bạn</string>
    <string name="err_msg_birthday">Vui lòng nhập ngày sinh của bạn</string>
    <string name="err_msg_address">Vui lòng nhập địa chỉ của bạn</string>
    <string name="err_msg_inviationcode">Mã giới thiệu phải có 6 ký tự</string>

    <!-- Test facebook -->

    <string name="facebook_app_id">220286601783723</string>
    <string name="confirm_button_text">Xác nhận</string>
    <string name="cancel_button_text">Không</string>
    <string name="action_change_password">Thay đổi mật khẩu</string>
    <string name="share_code_text">Chia sẻ mã giới thiệu</string>
    <string name="dialog_logout_title">Đăng xuất</string>
    <string name="dialog_logout_content">Bạn thật sự muốn thoát</string>
    <string name="dialog_delete_title">Xác Nhận!!!</string>
    <string name="dialog_delete_content">Bạn thật sự muốn xoá</string>
</resources>
