<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.lamphongstore.lamphong.activities.ChangePassword">

    <ImageView
        android:id="@+id/button_back_to_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_v2" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_input_old_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:passwordToggleEnabled="true">

        <com.lamphongstore.lamphong.material.LPEditText
            android:id="@+id/input_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_old_password"
            android:imeActionId="@+id/old_pass"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_input_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_input_old_pass"
        app:passwordToggleEnabled="true">

        <com.lamphongstore.lamphong.material.LPEditText
            android:id="@+id/input_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_password"
            android:imeActionId="@+id/new_pass"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_confirm_change_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_input_new_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:background="@drawable/button_shape"
        android:text="@string/change_text"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress_change"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
