<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.lamphongstore.lamphong.activities.GenerateQRActivity">

    <TextView
        android:id="@+id/viewScanQRCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/scanqrcode"
        android:textSize="14sp"
        android:textStyle="bold|normal" />

    <ImageView
        android:id="@+id/qrCode"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/viewScanQRCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

    <TextView
        android:id="@+id/viewCustomerCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/qrCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/customerCode"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/share_preference_code_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/qrCode"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:layout_toEndOf="@id/viewCustomerCode"
        app:srcCompat="@drawable/ic_share" />

    <TextView
        android:id="@+id/viewCustomerInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewCustomerCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/customerInstruction"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/viewEmployeeInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewCustomerInstruction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_place"
        android:gravity="bottom"
        android:text="@string/employeeInstruction"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewEmployeeInstruction"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_delete" />
</RelativeLayout>