<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.lamphongstore.lamphong.activities.SignUpActivity">

    <ScrollView
        android:id="@+id/base_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/signup_form"
                layout="@layout/form_user_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_form"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                app:passwordToggleEnabled="true">

                <com.lamphongstore.lamphong.material.LPEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signup_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_password"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_shape"
                android:text="@string/signup_text"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/base_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/ask_to_login" />

        <TextView
            android:id="@+id/login_text_clickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/login_text"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>